# landmatrix

./: .bowerrc  .coveragerc  .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Caddyfile  Kunigunde.toml  Pipfile  README.md  README.rst  bower.json  conftest.py  dodo.py  fabfile.py  gulpfile.js  gunicorn.conf.py  init.sh  manage.py  mkdocs.yml  package-lock.json  package.json  playwright-storageState.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  test-setup.sh  test.sh  test.sql  webpack-stats.json  webpack.config.js
_elasticsearch_impl/: gnd_hit_the_ground_running.sh
api/: api.py  deals_test_data.py  decorators.py  elasticsearch.py  filters.py  mixins.py  pagination.py  serializers.py  statistics_manager.py  tests.py  urls.py  utils.py  views.py
api/query_sets/: activity_query_set.py  agricultural_produce_query_set.py  contract_farming_query_set.py  countries_query_set.py  deals_query_set.py  fake_query_set.py  fake_query_set_with_subquery.py  filter_query_set.py  hectares_query_set.py  implementation_status_query_set.py  intention_query_set.py  investor_country_summaries_query_set.py  investor_target_countries_query_set.py  investors_query_set.py  latest_changes_query_set.py  logging_query_set.py  negotiation_status_query_set.py  produce_info_query_set.py  regions_query_set.py  resource_extraction_query_set.py  simple_fake_query_set.py  statistics_query_set.py  target_country_summaries_query_set.py  top_10_countries_query_set.py  transnational_deals_by_country_query_set.py  transnational_deals_query_set.py  users_query_set.py
api/templatetags/: filter_tags.py
api/tests/: api_test_base.py  api_test_functions.py  deals_test_data.py  test_agricultural_produce.py  test_deals.py  test_elasticsearch.py  test_filters.py  test_hectares.py  test_implementation_status.py  test_intention.py  test_investor_country_summaries.py  test_negotiation_status.py  test_record_reader.py  test_serializers.py  test_target_country_summaries.py  test_tastypie.py  test_templatetags.py  test_top_10_countries.py  test_transnational_deals.py  test_transnational_deals_by_country.py  test_utils.py
api/views/: __init__.py  agricultural_produce_json_view.py  base.py  chart_views.py  (+24 more)
apps/: conftest.py  serializer.py  test_utils.py  utils.py
chart/: cms_app.py  cms_plugins.py  urls.py  views.py
chart_view/: cms_app.py  cms_plugins.py  models.py  urls.py  views.py
charts/: pdfgen.py  tests.py  urls.py  views.py
commands/: check_export.py  check_export_deals.py  clean_activityattributegroups.py  compare_legacy_exports.py  compare_lists.py  deals_with_multiple_primary_investors.py  elasticsearch_test.py  get_investor_duplicates.py  get_not_public_reason.py  link_comments.py  load_country_geometries.py  populate_activity_changesets.py  populate_countries.py  populate_operational_companies.py  primary_investors_with_different_countries.py  read_new_countries.py
config/: frontend_i18n_strings.py  urls.py  wsgi.py
dashboard/: admin.py  urls.py
django_pydantic_jsonfield/: __init__.py
docs/: api.md  conf.py  development.md  index.md  index.rst  installation.md  schema.md
docs_deprecated/: Makefile  index.rst
editor/: admin.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
feeds/: activity_changes.py  deal_changes.py  views.py
from_v1/: README.md  cleanup_involvements.py  map_model.py  map_model_implementations.py  map_tag_groups.py  migrate.py  migrate.sh  settings.py  test_converted_deals.sh
frontend/: .eslintrc.cjs  .posthtmlrc  .prettierignore  .prettierrc  babel.config.js  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  postcss.config.js  setupTests.ts  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js  vite.config.ts  vue-i18n-extract.config.js  webpack.config.js  webpack.config.js_
global/: cms_app.py  urls.py  views.py
global_app/: by_investor.out  by_investor_country.out  cms_app.py  tests.py  urls.py  views.py  widgets.py
grid/: __init__.py  apps.py  cms_app.py  fields.py  gis.py  urls.py  utils.py  widgets.py
integration/: mixins.py  test_deal_create.py  test_deal_delete.py  test_deal_recover.py  test_deal_update.py  test_investor_create.py  test_investor_delete.py  test_investor_recover.py  test_investor_update.py
landmatrix/: __init__.py  admin.py  apps.py  celery.py  celery_app.py  default_settings.py  fields.py  forms.py  models.py  pdfgen.py  settings.py  settings.py.dist  signals.py  storage.py  tasks.py  tests.py  urls.py  views.py  wsgi.py
lo/: SymbolsAndIcons.txt  icon_selection.json
map/: admin.py  urls.py  views.py
maplandmatrix/: README.md  ToDo  admin.py  cms_plugins.py  dokuMarie.doc  load.py  models.py  views.py
message/: admin.py  models.py
myenv/: pip-selfcheck.json
newfront/: .eslintrc.cjs  .prettierignore  .prettierrc  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js  vite.config.ts
notifications/: admin.py  apps.py  distribution.py  exceptions.py  models.py  signals.py  tests.py
ol3_widgets/: __init__.py  tests.py  widgets.py
plumbing/: find_i18n.py  i18n_helpers.py  pojson.py
public_comments/: __init__.py  forms.py  urls.py  views.py
templates/: 1-column.html  404.html  500.html  base-djangocms-stock.html  base-gettheidea.html  base-map.html  base.html  download.html  export.html  filters.html  fullwidth.html  language_chooser.html  lean_base.html  maintenance.html  menu.html  share.html  start.html  start_mock.html
tests/: cms.spec.ts  create-deal-investor.spec.ts  create-deal.spec.ts  create-investor.spec.ts  deal.spec.ts  fixtures.ts  global-setup.ts  investor.spec.ts  login.spec.ts  roles.spec.ts  utils.ts  workflow.spec.ts
tmp_gnd/: gnd_elastic.sh  gnd_hit_the_ground_running.sh  gnd_reset.sh  gnd_reset_objects.py
wagtail_modeltranslation/: wagtail_hooks.py
wagtailcms/: context_processors.py  image_formats.py  models.py  translation.py
(+3633 files in other folders)
